--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
 
@@ -22,8 +22,8 @@
       <div class="person-card">
         <img src="images/image-jeremy.png" alt="" class="person-card__photo">
         <div class="person-card__text">
-          <p class="info-card__subtitle">Report for</p>
-          <h3 class="info-card__title">Jeremy Robson</h3>
+          <p class="person-card__subtitle">Report for</p>
+          <h3 class="person-card__title">Jeremy Robson</h3>
         </div>
       </div>
       <div class="view-selector">
@@ -32,15 +32,75 @@
         <div class="view-selector__item">Montly</div>
       </div>
     </div>
-    <div class="dashboard__item">
+    <div class="dashboard__item dashboard__item--work">
       <article class="tracking-card">
         <header class="tracking-card__header">
           <h4 class="tracking-card__title">Work</h4>
           <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="menu">
         </header>
         <div class="tracking-card__body">
-          <div class="tracking-card__time">5hrs</div>
+          <div class="tracking-card__time">32hrs</div>
+          <div class="tracking-card__prev-period">Previous - 36hrs</div>
+        </div>
+      </article>
+    </div>
+    <div class="dashboard__item dashboard__item--play">
+      <article class="tracking-card">
+        <header class="tracking-card__header">
+          <h4 class="tracking-card__title">Play</h4>
+          <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="menu">
+        </header>
+        <div class="tracking-card__body">
+          <div class="tracking-card__time">10hrs</div>
+          <div class="tracking-card__prev-period">Previous - 8hrs</div>
+        </div>
+      </article>
+    </div>
+    <div class="dashboard__item dashboard__item--study">
+      <article class="tracking-card">
+        <header class="tracking-card__header">
+          <h4 class="tracking-card__title">Study</h4>
+          <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="menu">
+        </header>
+        <div class="tracking-card__body">
+          <div class="tracking-card__time">4hrs</div>
           <div class="tracking-card__prev-period">Previous - 7hrs</div>
+        </div>
+      </article>
+    </div>
+    <div class="dashboard__item dashboard__item--exercise">
+      <article class="tracking-card">
+        <header class="tracking-card__header">
+          <h4 class="tracking-card__title">Exercise</h4>
+          <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="menu">
+        </header>
+        <div class="tracking-card__body">
+          <div class="tracking-card__time">4hrs</div>
+          <div class="tracking-card__prev-period">Previous - 5hrs</div>
+        </div>
+      </article>
+    </div>
+    <div class="dashboard__item dashboard__item--social">
+      <article class="tracking-card">
+        <header class="tracking-card__header">
+          <h4 class="tracking-card__title">Social</h4>
+          <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="menu">
+        </header>
+        <div class="tracking-card__body">
+          <div class="tracking-card__time">5hrs</div>
+          <div class="tracking-card__prev-period">Previous - 10hrs</div>
+        </div>
+      </article>
+    </div>
+    <div class="dashboard__item dashboard__item--self-care">
+      <article class="tracking-card">
+        <header class="tracking-card__header">
+          <h4 class="tracking-card__title">Self Care</h4>
+          <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="menu">
+        </header>
+        <div class="tracking-card__body">
+          <div class="tracking-card__time">2hrs</div>
+          <div class="tracking-card__prev-period">Previous - 2hrs</div>
         </div>
       </article>
     </div>
